--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@
     color: white;
     background-color: black;
     border-radius: 5px;
+	border:none;
 }
 #btn:hover{
     background-color: yellow;
     color: black;
     border-radius: 30px;
+	border:none;
 }
 /* Your CSS Code here. */
