--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 #btn{
-    color: white;
-    background-color: black;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     border-radius: 5px;
-	border:none;
+	border:0px none rgb(255, 255, 255);
 }
 #btn:hover{
     background-color: yellow;
@@ -10,4 +10,5 @@
     border-radius: 30px;
 	border:none;
 }
+
 /* Your CSS Code here. */
